# physica

./: setup.cfg
physica/: __init__.py
physica/core/: dimsAnalysis.py  unitSystems.py  units.py
physica/core/tests/: test_units.py
physica/vectors/: __init__.py  points.py  verctors.py
physica/vectors/tests/: test_point.py
