[metadata]
name = physica
version = 0.0.1
author = Rodrigo Jimenez
author_email = jimenezhuancarodrigo@gmail.com
mantainer = Rodrigo Jimenez
mantainer_email = jimenezhuancarodrigo@gmail.com
description = "Physica is a physics package for engineering"
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0
license_file = LICENSE
keywords = physics, physics package, engineering
url = https://github.com/Rodrigo-A-Jimenez/physica/blob/main/README.md
project_urls =
    Github = https://github.com/Rodrigo-A-Jimenez/physica
    Bug Tracker = https://github.com/Rodrigo-A-Jimenez/physica/issues
    Source = https://github.com/Rodrigo-A-Jimenez/physica
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
